--- a/project1/index.html
+++ b/project1/index.html
@@ -16,7 +16,7 @@
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control" ng-model="list" ng-style="boxStyle">
+             class="form-control" ng-model="list">
              </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkItems()">Check If Too Much</button>
