--- a/project1/index.html
+++ b/project1/index.html
@@ -22,7 +22,7 @@
              <button class="btn btn-default" ng-click="checkItems()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-          <i>{{msg}}</i>
+          {{msg}}
          </div>
    </div>
 </body>
